--- a/src/components/chat/chat.scss
+++ b/src/components/chat/chat.scss
@@ -8,14 +8,14 @@
     display: flex;
     flex-direction: column;
     gap: 20px;
-    overflow-y: scroll;
+    overflow-y: auto;
 
     h1 {
       font-weight: 300;
     }
 
     .message {
-      background-color: white;
+      background-color: #fff;
       padding: 20px;
       border-radius: 10px;
       display: flex;
@@ -38,7 +38,7 @@
 
   .chatBox {
     flex: 1;
-    background-color: white;
+    background-color: #fff;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -63,10 +63,12 @@
           object-fit: cover;
         }
       }
+
       .close {
         cursor: pointer;
       }
     }
+
     .center {
       height: 350px;
       overflow: scroll;
@@ -75,38 +77,39 @@
       flex-direction: column;
       gap: 20px;
 
-      .chatMessage{
+      .chatMsg {
         width: 50%;
 
-        &.own{
+        &.own {
           align-self: flex-end;
           text-align: right;
         }
 
-        span{
+        span {
           font-size: 12px;
-          background-color: #f7c14b39;
-          padding: 2px;
+          background-color: #f7c14b85;
+          padding: 5px;
           border-radius: 5px;
         }
       }
     }
+
     .bottom {
-      border-top: 2px solid #f7c14b85;
+      border-top: 1px solid #f7c14b85;
       height: 60px;
       display: flex;
       align-items: center;
       justify-content: space-between;
 
-      textarea{
-        flex:3;
+      textarea {
+        flex: 3;
         height: 100%;
         border: none;
         padding: 20px;
       }
 
-      button{
-        flex:1;
+      button {
+        flex: 1;
         background-color: #f7c14b85;
         height: 100%;
         border: none;
