--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -32,7 +32,7 @@ nav {
       gap: 10px;
 
       img {
-        width: 28px;
+        width: 50px;
       }
 
       span {
@@ -46,6 +46,7 @@ nav {
       }
     }
   }
+
   .right {
     flex: 2;
     display: flex;
@@ -63,12 +64,12 @@ nav {
       margin: 20px;
     }
 
-    .user{
+    .user {
       display: flex;
       align-items: center;
       font-weight: bold;
 
-      img{
+      img {
         width: 40px;
         height: 40px;
         border-radius: 50%;
@@ -76,20 +77,20 @@ nav {
         margin-right: 20px;
       }
 
-      span{
-        @include sm{
+      span {
+        @include sm {
           display: none;
         }
       }
 
-      .profile{
+      .profile {
         padding: 12px 24px;
         background-color: #fece51;
         cursor: pointer;
         border: none;
         position: relative;
-        
-        .notification{
+
+        .notification {
           position: absolute;
           top: -8px;
           right: -8px;
@@ -107,7 +108,13 @@ nav {
     }
 
     .register {
+      width: 100px;
+      height: 50px;
       background-color: #fece51;
+      padding: 12px 24px;
+      border: none;
+      border-radius: 10px;
+
     }
 
     .menuIcon {
