--- a/src/routes/newPostPage/newPostPage.scss
+++ b/src/routes/newPostPage/newPostPage.scss
@@ -1,10 +1,17 @@
+@import "../../responsive.scss";
+
 .newPostPage {
   height: 100%;
   display: flex;
 
+  @include md {
+    flex-direction: column;
+    overflow: auto;
+  }
+
   .formContainer {
     flex: 3;
-    overflow: scroll;
+    overflow: auto;
 
     .wrapper {
       margin: 30px 50px 100px 0px;
@@ -21,8 +28,7 @@
           flex-direction: column;
           gap: 5px;
 
-          label {
-          }
+          label {}
 
           input {
             padding: 20px;
@@ -38,12 +44,13 @@
             width: 100%;
             height: 320px;
 
-            .quill > .ql-container > .ql-editor{
+            .quill>.ql-container>.ql-editor {
               height: 200px;
               font-size: 16px;
             }
           }
         }
+
         .sendButton {
           width: 30%;
           border-radius: 5px;
@@ -71,6 +78,16 @@
       height: 180px;
       object-fit: cover;
       border-radius: 5px;
+    }
+
+    .postImages {
+      width: 50%;
+      object-fit: cover;
+    }
+
+    @include md {
+      flex: none;
+      height: max-content;
     }
   }
 }
